--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,23 +1,16 @@
 /**
  * Site header
  */
-.site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
-    min-height: 56px;
 
+.site-header {
+    min-height: 80px;
     // Positioning context for the mobile navigation icon
     position: relative;
 }
 
 .site-title {
-    font-size: 26px;
-    font-weight: 300;
-    line-height: 56px;
-    letter-spacing: -1px;
-    margin-bottom: 0;
+    line-height: 80px;
     float: left;
-
     &,
     &:visited {
         color: $grey-color-dark;
@@ -26,22 +19,18 @@
 
 .site-nav {
     float: right;
-    line-height: 56px;
-
+    line-height: 80px;
     .menu-icon {
         display: none;
     }
-
     .page-link {
         color: $text-color;
         line-height: $base-line-height;
-
         // Gaps between nav items, but not on the last one
         &:not(:last-child) {
             margin-right: 20px;
         }
     }
-
     @include media-query($on-palm) {
         position: absolute;
         top: 9px;
@@ -50,7 +39,6 @@
         border: 1px solid $grey-color-light;
         border-radius: 5px;
         text-align: right;
-
         .menu-icon {
             display: block;
             float: right;
@@ -59,31 +47,25 @@
             line-height: 0;
             padding-top: 10px;
             text-align: center;
-
-            > svg {
+            >svg {
                 width: 18px;
                 height: 15px;
-
                 path {
                     fill: $grey-color-dark;
                 }
             }
         }
-
         .trigger {
             clear: both;
             display: none;
         }
-
         &:hover .trigger {
             display: block;
             padding-bottom: 5px;
         }
-
         .page-link {
             display: block;
             padding: 5px 10px;
-
             &:not(:last-child) {
                 margin-right: 0;
             }
@@ -93,10 +75,10 @@
 }
 
 
-
 /**
  * Site footer
  */
+
 .site-footer {
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
@@ -128,29 +110,28 @@
 
 .footer-col-1 {
     width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    width:         calc(35% - (#{$spacing-unit} / 2));
+    width: calc(35% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-2 {
     width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width:         calc(20% - (#{$spacing-unit} / 2));
+    width: calc(20% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-3 {
     width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    width:         calc(45% - (#{$spacing-unit} / 2));
+    width: calc(45% - (#{$spacing-unit} / 2));
 }
 
 @include media-query($on-laptop) {
     .footer-col-1,
     .footer-col-2 {
         width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-        width:         calc(50% - (#{$spacing-unit} / 2));
+        width: calc(50% - (#{$spacing-unit} / 2));
     }
-
     .footer-col-3 {
         width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
+        width: calc(100% - (#{$spacing-unit} / 2));
     }
 }
 
@@ -158,17 +139,17 @@
     .footer-col {
         float: none;
         width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
+        width: calc(100% - (#{$spacing-unit} / 2));
     }
 }
-
 
 
 /**
  * Page content
  */
+
 .page-content {
-    padding: $spacing-unit 0;
+    padding: 0 0 $spacing-unit;
 }
 
 .page-heading {
@@ -178,8 +159,7 @@
 .post-list {
     margin-left: 0;
     list-style: none;
-
-    > li {
+    >li {
         margin-bottom: $spacing-unit;
     }
 }
@@ -195,10 +175,10 @@
 }
 
 
-
 /**
  * Posts
  */
+
 .post-header {
     margin-bottom: $spacing-unit;
 }
@@ -207,7 +187,6 @@
     font-size: 42px;
     letter-spacing: -1px;
     line-height: 1;
-
     @include media-query($on-laptop) {
         font-size: 36px;
     }
@@ -215,28 +194,98 @@
 
 .post-content {
     margin-bottom: $spacing-unit;
-
     h2 {
         font-size: 32px;
-
         @include media-query($on-laptop) {
             font-size: 28px;
         }
     }
-
     h3 {
         font-size: 26px;
-
         @include media-query($on-laptop) {
             font-size: 22px;
         }
     }
-
     h4 {
         font-size: 20px;
-
         @include media-query($on-laptop) {
             font-size: 18px;
         }
     }
+}
+
+.splash {
+    text-align: center;
+    padding: $spacing-unit*2 $spacing-unit/2;
+    background: #13547a;
+    /* Old Browsers */
+    background: -webkit-linear-gradient(left, #13547a, #80d0c7);
+    /*Safari 5.1-6*/
+    background: -o-linear-gradient(left, #13547a, #80d0c7);
+    /*Opera 11.1-12*/
+    background: -moz-linear-gradient(left, #13547a, #80d0c7);
+    /*Fx 3.6-15*/
+    background: linear-gradient(to right, #13547a, #80d0c7);
+    /*Standard*/
+    img {
+        max-width: 420px;
+    }
+}
+
+#countdown {
+    display: block;
+    color: white;
+    letter-spacing: 11px;
+    font-size: 28px;
+    font-weight: 200;
+    padding: $spacing-unit 0;
+    height: 102px;
+    box-sizing: border-box;
+    animation: 0.5s ease-out 1s 1 fadeIn;
+    // Added cheeky fade so that the countdown doesn't just flash into appearance
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+.about {
+    padding: $spacing-unit 0;
+    text-align: center;
+    h1 {
+        padding: $spacing-unit 0;
+    }
+    p {
+        max-width: 845px;
+        margin: 0 auto $spacing-unit;
+        &:first-of-type {
+            &::before {
+                content: "";
+                display: block;
+                width: 70%;
+                border-top: 1px solid $text-color; 
+                margin: 0 auto;
+                height: $spacing-unit
+            }
+        }
+        &:last-of-type {
+            &::after {
+                content: "";
+                display: block;
+                width: 70%;
+                border-bottom: 1px solid $text-color; 
+                margin: 0 auto;
+                height: $spacing-unit
+            }
+        }
+    }
+}
+
+.works {
+    background-color: #eceef1;
 }
