--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -289,3 +289,13 @@
 .works {
     background-color: #eceef1;
 }
+
+.works-grid {
+    display: flex;
+    flex-wrap: wrap;
+    .work {
+        width: 33%;
+        padding: 10px;
+        box-sizing: border-box;
+    }
+}
