--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -339,3 +339,17 @@
         }
     }
 }
+
+//.work-modal {
+//    position: fixed;
+//    top:0;
+//    left:0;
+//    width: 100%;
+//    height: 100%;
+//    background: rgba(3,3,3, 0.5);
+//}
+//
+//.modal-content {
+//    background: white;
+//    padding: $spacing-unit;
+//}
