changed splash video for a smaller version, added google map find us section, contact section and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,29 +1,21 @@
 <footer class="site-footer">
 
-  <div class="wrapper">
+    <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li>{{ site.date }}</li>
-          <li>
-            <address>
+            <li>
+                <address>
               <p>{{ site.address }}</p>
             </address>
-          </li>
+            </li>
         </ul>
-      </div>
 
-      <div class="footer-col footer-col-2">
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
+        <div class="footer-text">
+            <p>
+                Digital Media Design
+                <br> Graduate Exhibition
+                <br> 23 - 26 June 2017</p>
+        </div>
     </div>
-
-  </div>
 
 </footer>
