--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -80,13 +80,12 @@
 */
 
 .site-footer {
-    border-top: 1px solid $grey-color-light;
+    background: #34373d;
     padding: $spacing-unit 0;
-}
-
-.footer-heading {
-    font-size: 18px;
-    margin-bottom: $spacing-unit / 2;
+    color: white;
+    text-align: center;
+    font-weight: 200;
+    font-size: $base-font-size*1.1;
 }
 
 .contact-list,
@@ -95,52 +94,9 @@
     margin-left: 0;
 }
 
-.footer-col-wrapper {
-    font-size: 15px;
-    color: $grey-color;
-    margin-left: -$spacing-unit / 2;
-    @extend %clearfix;
-}
-
-.footer-col {
-    float: left;
-    margin-bottom: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
-}
-
-.footer-col-1 {
-    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    width: calc(35% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-2 {
-    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width: calc(20% - (#{$spacing-unit} / 2));
-}
-
-.footer-col-3 {
-    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    width: calc(45% - (#{$spacing-unit} / 2));
-}
-
-@include media-query($on-laptop) {
-    .footer-col-1,
-    .footer-col-2 {
-        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-        width: calc(50% - (#{$spacing-unit} / 2));
-    }
-    .footer-col-3 {
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width: calc(100% - (#{$spacing-unit} / 2));
-    }
-}
-
-@include media-query($on-palm) {
-    .footer-col {
-        float: none;
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width: calc(100% - (#{$spacing-unit} / 2));
-    }
+.contact-list {
+    margin: $spacing-unit 0;
+    font-style: normal;
 }
 
 
@@ -242,7 +198,7 @@ video#bgvid {
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
     transform: translateX(-50%) translateY(-50%);
-//    background: url(/assets/splash--poster.jpg);
+    //    background: url(/assets/splash--poster.jpg);
     background-size: cover;
 }
 
@@ -275,12 +231,17 @@ video#bgvid {
     }
 }
 
+section {
+    h1 {
+        padding: $spacing-unit 0;
+        margin: 0;
+        text-align: center;
+    }
+}
+
 .about {
     padding: $spacing-unit 0;
     text-align: center;
-    h1 {
-        padding: $spacing-unit 0;
-    }
     p {
         max-width: 845px;
         margin: 0 auto $spacing-unit;
@@ -307,13 +268,10 @@ video#bgvid {
     }
 }
 
-.works {
+.works,
+.contact {
     background-color: #eceef1;
     text-align: center;
-    h1 {
-        padding: $spacing-unit 0;
-        margin: 0;
-    }
 }
 
 .works-grid {
@@ -329,9 +287,16 @@ video#bgvid {
         a {
             color: $text-color;
             letter-spacing: 2px;
+            &:hover {
+                text-decoration: none;
+                h2 {
+                    color: #80d0c7;
+                }
+            }
             h2,
             h3 {
                 font-weight: 800;
+                transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
             }
             h2 {
                 margin: 0;
@@ -366,6 +331,49 @@ video#bgvid {
                 color: $text-color;
             }
         }
+    }
+}
+
+#map {
+    width: 100%;
+    height: 400px;
+}
+
+.contact {
+    padding-bottom: $spacing-unit;
+    img {
+        max-width: 55px;
+        margin-bottom: $spacing-unit/2;
+        transform: scale(1);
+        transition: 0.25s all;
+    }
+    a {
+        color: $text-color;
+        &:hover {
+            text-decoration: none;
+            .tile {
+                box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+            }
+        }
+    }
+    h2 {
+        &::after {
+            content: "";
+            display: block;
+            border-bottom: 1px solid $text-color;
+            padding-top: 5px;
+        }
+    }
+    p {
+        margin: 0;
+        font-size: $base-font-size * 0.8;
+    }
+    .tile {
+        background-color: white;
+        border-radius: 5px;
+        display: inline-block;
+        padding: $spacing-unit*1.5;
+        transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
     }
 }
 
