--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -314,6 +314,9 @@ section {
                 margin: 0;
                 padding-top: 20px;
             }
+            p {
+                margin-bottom: 20px;
+            }
         }
     }
 }
