--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,3 +19,7 @@
     </div>
 
 </footer>
+
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+<script src="/js/jquery.history.js"></script>
+<script src="/js/modal.js"></script>
