--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -388,16 +388,54 @@ section {
     }
 }
 
-//.work-modal {
-//    position: fixed;
-//    top:0;
-//    left:0;
-//    width: 100%;
-//    height: 100%;
-//    background: rgba(3,3,3, 0.5);
-//}
-//
-//.modal-content {
-//    background: white;
-//    padding: $spacing-unit;
-//}
+// Works 
+
+.work {
+  .header {
+    text-align: center;
+  }
+  .header-image {
+    margin-bottom: 3rem;
+  }
+
+  .title {
+    margin-bottom: 0;
+  }
+
+  .content {
+    padding: 3rem;
+    margin: 0 auto;
+    max-width: 800px;
+  }
+
+  .author {
+    margin: 0 auto;
+    width: 300px;
+    text-align: center;
+    .author-image {
+      width: 100%;
+      height: 300px;
+      border-radius: 50%;
+      overflow: hidden;
+      margin-bottom: 2rem;
+      img {
+        max-width: 100%;
+      }
+    }
+  }
+  
+  .prev, .next {
+    position: fixed;
+    top: 50%;
+    background-color: white;
+    padding: 1rem;
+  }
+  .prev {
+    left: 0;
+  }
+  .next {
+    right: 0;
+  }
+}
+
+
