--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -22,6 +22,14 @@ layout: default
                 {% endif %}
                 <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>
             </div>
+            <div class="social-links">
+               {% if page.email %}
+                <span class="email"><a href="mailto:{{ page.email }}">{{ page.email }}</a></span>
+                {% endif %}
+                {% if page.portfolio %}
+                <span class="portfolio"><a href="{{ page.portfolio }}" target="_blank">{{ page.portfolio }}</a></span>
+                {% endif %}
+            </div>
         </div>
 
 
@@ -30,3 +38,4 @@ layout: default
         <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a> {% endif %}
     </div>
 </article>
+ 
