fixed nav links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,10 +20,10 @@
           {% endif %}
         {% endfor %} -->
         
-        <a href="#about" class="page-link">About</a>
-        <a href="#works" class="page-link">Works</a>
-        <a href="#find-us" class="page-link">Find us</a>
-        <a href="#contact" class="page-link">Contact</a>
+        <a href="/#about" class="page-link">About</a>
+        <a href="/#works" class="page-link">Works</a>
+        <a href="/#find-us" class="page-link">Find us</a>
+        <a href="/#contact" class="page-link">Contact</a>
       </div>
     </nav>
 
